[gd_scene load_steps=21 format=3 uid="uid://d0sg81cbdx27u"]

[ext_resource type="Texture2D" uid="uid://hrdjx0863o5d" path="res://Assets/Test/map_test.png" id="1_mdafp"]
[ext_resource type="Script" path="res://Scenes and Scripts/map_house_test.gd" id="2_e7gsj"]
[ext_resource type="Texture2D" uid="uid://cdk034lnactt1" path="res://Assets/Test/House Animation/map_house_animation_test0.png" id="2_s8uy4"]
[ext_resource type="Texture2D" uid="uid://s7np8vn7a40x" path="res://Assets/Test/House Animation/map_house_animation_test1.png" id="4_ek0bm"]
[ext_resource type="Texture2D" uid="uid://dulbumr0rh2st" path="res://Assets/Test/House Animation/map_house_animation_test2.png" id="5_u4elg"]
[ext_resource type="Texture2D" uid="uid://cqtp0uxkli3co" path="res://Assets/Test/House Animation/map_house_animation_test3.png" id="6_aa40f"]
[ext_resource type="Script" path="res://Scenes and Scripts/job_notes.gd" id="7_ogfj7"]
[ext_resource type="Texture2D" uid="uid://buqy3fnj1b2cp" path="res://Assets/Test/Jobzettel_Button_.png" id="7_yoxky"]
[ext_resource type="Texture2D" uid="uid://b3tvfgcp4gink" path="res://Assets/Test/hud_background.png" id="9_cvvni"]
[ext_resource type="Script" path="res://Scenes and Scripts/exit_button.gd" id="10_0oi3s"]
[ext_resource type="Texture2D" uid="uid://c2vqnkipjixlw" path="res://Assets/Test/in_map_menu_job_note.png" id="10_kbx72"]
[ext_resource type="Texture2D" uid="uid://xl63shls5bm8" path="res://Assets/Test/exit_button.png" id="11_8vqrx"]
[ext_resource type="Texture2D" uid="uid://cm4hcr8fw4k5a" path="res://Assets/job_note1.PNG" id="13_2x76a"]
[ext_resource type="PackedScene" uid="uid://daswfhvjsa7jh" path="res://Scenes and Scripts/Player/player.tscn" id="14_0uuvf"]
[ext_resource type="Texture2D" uid="uid://b3ik703sl8ot0" path="res://Assets/Test/marp.png" id="15_45808"]

[sub_resource type="SpriteFrames" id="SpriteFrames_unxvv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_s8uy4")
}, {
"duration": 1.0,
"texture": ExtResource("4_ek0bm")
}, {
"duration": 1.0,
"texture": ExtResource("5_u4elg")
}, {
"duration": 1.0,
"texture": ExtResource("6_aa40f")
}],
"loop": true,
"name": &"house_animation_test",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ab4lo"]
size = Vector2(286.644, 373.924)

[sub_resource type="CircleShape2D" id="CircleShape2D_h683o"]
radius = 56.0803

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8raen"]
size = Vector2(101, 120)

[sub_resource type="NavigationPolygon" id="NavigationPolygon_i3shb"]
vertices = PackedVector2Array(3523, 2026, 3537, 2120, 1728, 2157, 2942, 2026, 3815, 1073, 3826, 1177, 2500, 1160, 2459, 1073, 1092, 521, 1073, 1, 1231, 12, 1214, 556, 1916, 21, 2044, 9, 2036, 680, 1890, 547, 671, 693, 502, 572, 521, 1214, 662, 1037, 863, 1955, 4, 1958, 16, 1822, 279, 1831, 3824, 484, 3835, 586, 3311, 618, 3212, 488, 3187, 668, 3311, 797, 2318, 833, 2178, 703, 2205, 900, 2312, 843, 3819, 1732, 3822, 1865, 2946, 1853, 2775, 1725, 2784, 2017, 1874, 2038, 1702, 1700, 1865, 1699, 1152, 1040, 1161, 1553, 1001, 1713, 1017, 2162, 896, 2170, 8, 1345, 20, 1191, 271, 1397, 2328, 1309, 2186, 1328, 2026, 1163, 2205, 1580, 2314, 1703, 2077, 927)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3), PackedInt32Array(4, 5, 6, 7), PackedInt32Array(8, 9, 10, 11), PackedInt32Array(12, 13, 14, 15), PackedInt32Array(15, 14, 16, 11), PackedInt32Array(8, 11, 16, 17), PackedInt32Array(18, 17, 16, 19), PackedInt32Array(20, 21, 22, 23), PackedInt32Array(24, 25, 26, 27), PackedInt32Array(28, 27, 26, 29), PackedInt32Array(28, 29, 30, 31), PackedInt32Array(32, 31, 30, 33), PackedInt32Array(34, 35, 36, 37), PackedInt32Array(38, 37, 36, 3), PackedInt32Array(38, 3, 2, 39), PackedInt32Array(39, 2, 40, 41), PackedInt32Array(18, 19, 42, 43, 44), PackedInt32Array(44, 45, 46, 20), PackedInt32Array(47, 48, 18, 49), PackedInt32Array(32, 33, 7, 6, 50, 51, 52), PackedInt32Array(44, 20, 23, 49, 18), PackedInt32Array(40, 44, 43, 53), PackedInt32Array(41, 40, 53), PackedInt32Array(54, 41, 53), PackedInt32Array(50, 54, 53, 51), PackedInt32Array(32, 52, 55)])
outlines = Array[PackedVector2Array]([PackedVector2Array(1242, 3, 1224, 546, 1880, 537, 1907, 12, 2055, -2, 2046, 690, 681, 703, 672, 1027, 1162, 1031, 1171, 1543, 2194, 1570, 2176, 1332, 2015, 1166, 2069, 919, 2194, 892, 2167, 694, 3178, 658, 3204, 479, 3833, 474, 3847, 596, 3321, 627, 3321, 807, 2324, 843, 2464, 1063, 3824, 1063, 3838, 1188, 2504, 1170, 2338, 1314, 2324, 1714, 1875, 1709, 1884, 2028, 2774, 2007, 2765, 1715, 3829, 1723, 3833, 1876, 2956, 1863, 2952, 2016, 3532, 2016, 3549, 2130, 1719, 2168, 1693, 1710, 1011, 1723, 1028, 2172, 888, 2181, 854, 1965, -6, 1969, 7, 1812, 269, 1821, 261, 1405, -2, 1354, 11, 1181, 511, 1204, 492, 563, 1082, 512, 1063, -9)])
source_geometry_group_name = &"navigation_polygon_source_group"

[node name="Map" type="Node2D"]

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 1923.0
offset_bottom = 1082.0
texture = ExtResource("15_45808")

[node name="MapTest" type="Node2D" parent="."]
position = Vector2(1080, 813)

[node name="Sprite2D" type="Sprite2D" parent="MapTest"]
position = Vector2(-369.333, -277)
scale = Vector2(0.658025, 0.658025)
texture = ExtResource("1_mdafp")

[node name="MapHouseTest" type="Node2D" parent="."]
position = Vector2(263, 127)
script = ExtResource("2_e7gsj")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="MapHouseTest"]
position = Vector2(707.333, 536.5)
scale = Vector2(0.654938, 0.654938)
sprite_frames = SubResource("SpriteFrames_unxvv")
animation = &"house_animation_test"

[node name="Area2D" type="Area2D" parent="MapHouseTest"]
position = Vector2(1080, 813)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="MapHouseTest/Area2D"]
position = Vector2(323, -143)
scale = Vector2(0.6625, 0.6625)
polygon = PackedVector2Array(-479, -282, -385, -389, -304, -312, -313, -228, -440, -185)

[node name="JobNotes" type="Node2D" parent="."]
script = ExtResource("7_ogfj7")

[node name="Sprite2D" type="Sprite2D" parent="JobNotes"]
position = Vector2(125.076, 110.75)
scale = Vector2(0.287849, 0.287849)
texture = ExtResource("7_yoxky")

[node name="Area2D" type="Area2D" parent="JobNotes"]
position = Vector2(117, 106)
scale = Vector2(0.331094, 0.331094)

[node name="CollisionShape2D" type="CollisionShape2D" parent="JobNotes/Area2D"]
position = Vector2(7.69284, -9.35703)
shape = SubResource("RectangleShape2D_ab4lo")

[node name="JobNoteMenu" type="Node2D" parent="JobNotes"]
visible = false

[node name="Sprite2D" type="Sprite2D" parent="JobNotes/JobNoteMenu"]
position = Vector2(960, 540)
rotation = 1.5708
texture = ExtResource("9_cvvni")

[node name="ExitButton" type="Node2D" parent="JobNotes/JobNoteMenu"]
script = ExtResource("10_0oi3s")

[node name="Sprite2D" type="Sprite2D" parent="JobNotes/JobNoteMenu/ExitButton"]
position = Vector2(1632, 296)
texture = ExtResource("11_8vqrx")

[node name="Area2D" type="Area2D" parent="JobNotes/JobNoteMenu/ExitButton"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="JobNotes/JobNoteMenu/ExitButton/Area2D"]
position = Vector2(1622, 297)
shape = SubResource("CircleShape2D_h683o")

[node name="InJobMenuJobNote1" type="Node2D" parent="JobNotes/JobNoteMenu"]

[node name="Sprite2D" type="Sprite2D" parent="JobNotes/JobNoteMenu/InJobMenuJobNote1"]
position = Vector2(968, 559)
texture = ExtResource("10_kbx72")

[node name="Area2D" type="Area2D" parent="JobNotes/JobNoteMenu/InJobMenuJobNote1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="JobNotes/JobNoteMenu/InJobMenuJobNote1/Area2D"]
position = Vector2(404.5, 377)
shape = SubResource("RectangleShape2D_8raen")

[node name="JobNote1" type="Node2D" parent="JobNotes/JobNoteMenu"]
visible = false

[node name="Sprite2D" type="Sprite2D" parent="JobNotes/JobNoteMenu/JobNote1"]
position = Vector2(921, 543)
scale = Vector2(0.81471, 0.81471)
texture = ExtResource("13_2x76a")

[node name="QuitButton" type="Sprite2D" parent="JobNotes/JobNoteMenu/JobNote1/Sprite2D"]
position = Vector2(238.122, -407.507)
scale = Vector2(0.5, 0.5)
texture = ExtResource("11_8vqrx")

[node name="PaperQuit" type="Area2D" parent="JobNotes/JobNoteMenu/JobNote1/Sprite2D"]

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="JobNotes/JobNoteMenu/JobNote1/Sprite2D/PaperQuit"]
position = Vector2(235.667, -406.28)
polygon = PackedVector2Array(-47.8698, 29.4583, -51.5521, -57.6892, -81.0104, -103.104, -33.1406, -87.1476, 15.9565, -49.0972, 50.3246, -7.36458, 81.0104, 47.8698, 94.5121, 105.559, 96.967, 157.111, 67.5087, 100.649, 22.0938, 56.4618)

[node name="Player" parent="." instance=ExtResource("14_0uuvf")]
position = Vector2(591, 797)

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="."]
navigation_polygon = SubResource("NavigationPolygon_i3shb")

[connection signal="mouse_entered" from="MapHouseTest/Area2D" to="MapHouseTest" method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="MapHouseTest/Area2D" to="MapHouseTest" method="_on_area_2d_mouse_exited"]
[connection signal="deactivate_house" from="JobNotes" to="MapHouseTest" method="_on_job_notes_deactivate_house"]
[connection signal="reactivate_house" from="JobNotes" to="MapHouseTest" method="_on_job_notes_reactivate_house"]
[connection signal="mouse_entered" from="JobNotes/Area2D" to="JobNotes" method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="JobNotes/Area2D" to="JobNotes" method="_on_area_2d_mouse_exited"]
[connection signal="mouse_entered" from="JobNotes/JobNoteMenu/ExitButton/Area2D" to="JobNotes/JobNoteMenu/ExitButton" method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="JobNotes/JobNoteMenu/ExitButton/Area2D" to="JobNotes/JobNoteMenu/ExitButton" method="_on_area_2d_mouse_exited"]
[connection signal="mouse_entered" from="JobNotes/JobNoteMenu/InJobMenuJobNote1/Area2D" to="JobNotes" method="_on_area_2d_InJobMenuJobNote1_mouse_entered"]
[connection signal="mouse_exited" from="JobNotes/JobNoteMenu/InJobMenuJobNote1/Area2D" to="JobNotes" method="_on_area_2d_InJobMenuJobNote1_mouse_exited"]
[connection signal="mouse_entered" from="JobNotes/JobNoteMenu/JobNote1/Sprite2D/PaperQuit" to="JobNotes" method="_on_paper_quit_mouse_entered"]
[connection signal="mouse_exited" from="JobNotes/JobNoteMenu/JobNote1/Sprite2D/PaperQuit" to="JobNotes" method="_on_paper_quit_mouse_exited"]
